*** 20001005_3 by lusky
added CVS Id tags to numerous files
brought Hybrid-team and version.c.SH
deleted ChangeLog.old and include/defs.h


*** 20001005_2 by bill

Added myself to Hybrid development team


*** 20001005_1 by bill

Fixed misnamed va var in sendto_realops()


*** 20001004_1 by lusky
changed ltrace to be consistant with trace for non-opers
mode channel +e now returns an error to non-chanops
unauth connection notices now include servername/port (jdc)


*** 20000917_1 by lusky
changed "juping locally" to "locally juping" (gp)
typo in stats z display (gp)


*** 20000914_1 by lusky
typo in channel jupe oper notice (db)
changed 461 error to show * for empty field (tv)
new config.h option ALLOW_DOT_IN_IDENT


*** 20000910_1 by lusky
backed out bill's patch for now


*** 20000907_2 by bill

Oops.  Forgot to remove canonize() and place function call in the #ifdef.


*** 20000907_1 by bill

Fixed the small bug with nick,nick,nick.


*** 20000901_1 by lusky
revved patchlevel to rc5
added canonize() call in m_message if NO_DUPE_MULTI_MESSAGES is defined


*** 20000824_4 by lusky
- removed trailing ')' from channel +/-j oper notices


*** 20000824_3 by lusky
- glines were not matched properly for unidented clients


*** 20000824_2 by lusky
- changed Q:line behaviour for NICKs to just return ERR_ERRONEUSNICKNAME


*** 20000824_1 by lusky
- server_estab() - mask IP in the op notices, but log the real ip
- disable wildcards in WHOIS (configurable for now)
- DLPATH didn't get loaded on REHASH


*** 20000822_1 by lusky
added support for CIDR IP tklines, just like normal klines


*** 20000821_2 by lusky
kludge to fix an I: bug where blah.foo.com could match I:nomatch::foo.com


*** 20000821_1 by lusky
fix for stats by a server causing a core


*** 20000820_1 by lusky
first shot at fixing a really old bug with USE_POLL that would cause the
  server to not parse queued commands until there was additional activity
  on the descriptor.


*** 20000812_2 by lusky